# Agent-Return-Processing-System

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  TEST_SUITE_REPORT.md  chat.py  cli.py  demo.py  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/: CODEOWNERS
agents/: __init__.py  billing_agent.py  communication_agent.py  escalation_agent.py  policy_agent.py  resolution_agent.py  triage_orchestrator.py
app_agents/: __init__.py  billing_agent.py  communication_agent.py  escalation_agent.py  policy_agent.py  resolution_agent.py  triage_orchestrator.py
database/: __init__.py  config.py  data.json  models.py  repository.py  schema.sql  seed.sql
docs/: ADR-001.md  PORTFOLIO_AUDIT.md  README_CHANGELOG.md  load_test_results.md  tool_interface_spec.md  tracing_dashboard.md
document/: KFdevA.docx  VTuixF (1).docx
frontend/: index.html
guardrails/: brand_voice.py  pii_scrubber.py  refund_cap.py  sentiment_monitor.py
infra/: Dockerfile  ab_test.py  csat_pipeline.py  datadog_monitors.py  datadog_setup.py  docker-compose.yml  kafka_config.py  redis_config.py
presentation/: Agent 01 — Customer Support & Returns Orchestrator.pptx  Agent01_Pitch_Deck.pptx  build_presentation.py
tests/: 250_test_cases.md  conftest.py  live_api_test.py  load_test.js  run_250_tests.py  test_billing_agent.py  test_comm_escalation.py  test_database.py  test_infra_observability.py  test_integration.py  test_main.py  test_policy_agent.py  test_resolution_agent.py  test_tools.py  test_tracking_tools.py
tools/: crm_tools.py  helpdesk_tools.py  notification_tools.py  payment_tools.py  policy_tools.py  shipping_tools.py  (+1 more)
(+21 files in other folders)
